--- a/PortofolioMahasiswa/app/src/main/AndroidManifest.xml
+++ b/PortofolioMahasiswa/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.portofoliomahasiswa">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PortofolioMahasiswa"
         tools:targetApi="31">
+        <activity
+            android:name=".DetailUser"
+            android:label="Detail Portofolio"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
